tests/NormalTests/paczka1/fuzzy1/52634181.err
Error in line 7: 9´nCJ S299 45,0
Error in line 8: StdO0c S299 61,2
Error in line 3: nA4PMT0un1 S299 24,8
Error in line 21: 9XnCJ A456 29,6
Error in line 14: 9XnCJ A456 35,9
Error in line 25: 9XnCJ S21 12,8
Error in line 18: YObrgW8DL S299 56,1
Error in line 31: StdO0c S299 62,35
Error in line 30: A605 S21 24,6
Error in line 26: 9XnCJ S299 48,8
